# Q1_2026_Accel_VedanshShuklaa

./: .gitignore  .gitmodules
accel-pinocchio-escrow/: Cargo.toml
accel-pinocchio-escrow/src/: lib.rs
automated-fee-collector/: Anchor.toml  README.md  config.toml  package-lock.json  package.json  prompt.txt
automated-fee-collector/cron/: cron.ts
automated-fee-collector/programs/automated-fee-collector/: Cargo.toml
automated-fee-collector/programs/automated-fee-collector/src/: error.rs  lib.rs  state.rs
automated-fee-collector/programs/automated-fee-collector/src/instructions/: init_mint.rs  init_treasury.rs  manual_collect.rs  mint_to.rs  mod.rs  schedule.rs  transfer.rs  update_fee.rs
automated-fee-collector/scripts/: get-pdas.ts  setup-task-queue.ts
automated-fee-collector/tests/: automated-fee-collector.ts  constants.ts
cli-todo/: Cargo.toml
cli-todo/src/: main.rs
generic-storage/: Cargo.toml
generic-storage/src/: generic_storage.rs  main.rs
gpt-scheduler/: Anchor.toml  README.md  package-lock.json  package.json  tsconfig.json
gpt-scheduler/programs/gpt-scheduler/: Cargo.toml
gpt-scheduler/programs/gpt-scheduler/src/: error.rs  lib.rs  state.rs
gpt-scheduler/programs/gpt-scheduler/src/instructions/: callback_from_gpt.rs  initialize.rs  mod.rs  query_gpt.rs  schedule_query.rs
gpt-scheduler/scripts/: get-pdas.ts
gpt-scheduler/tests/: constants.ts  gpt-scheduler.ts
magicblock-er-example/: Anchor.toml  package-lock.json  txtx.yml
magicblock-er-example/tests/: er-state-account.ts  er_state_account.ts
nft-staking-core-example/: .gitignore  Anchor.toml  package-lock.json  txtx.yml
transfer-hook-vault/: Anchor.toml  package-lock.json  txtx.yml
whitelist-transfer-hook/: package-lock.json  package.json
(+62 files in other folders)
